# moto

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/config/: asgi.py  exception_handler.py  settings.py  urls.py  wsgi.py
backend/tests/: api_urls.py  test_integration.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: layout.tsx
frontend/app/__tests__/: page.test.tsx
k8s/: namespace.yaml  network-policies.yaml  secrets.yaml.template
k8s/backend/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
k8s/frontend/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
k8s/ingress/: ingress-admin.yaml  ingress.yaml
k8s/monitoring/grafana/: configmap-dashboard-provider.yaml  configmap-dashboards.yaml  configmap-datasource.yaml  deployment.yaml  pvc.yaml  service.yaml
k8s/monitoring/postgres-exporter/: deployment.yaml  service.yaml
k8s/monitoring/prometheus/: configmap.yaml  deployment.yaml  pvc.yaml  rbac.yaml  service.yaml
k8s/monitoring/redis-exporter/: deployment.yaml  service.yaml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/dashboards/json/: django.json  postgresql.json  redis.json
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
terraform/: database.tf  main.tf  network.tf  outputs.tf  redis.tf  terraform.tfvars  variables.tf
